--- a/backend/src/main/resources/messages/messages_it_IT.properties
+++ b/backend/src/main/resources/messages/messages_it_IT.properties
@@ -18,11 +18,11 @@ app.info=Informazione
 # ========================================
 auth.login.success=Accesso effettuato con successo
 auth.login.failed=Credenziali non valide
-auth.login.blocked=Account temporaneamente bloccato. Riprova pi˘ tardi
-auth.login.inactive=L'account non Ë attivo. Verifica la tua email o contatta il supporto
+auth.login.blocked=Account temporaneamente bloccato. Riprova pi√π tardi
+auth.login.inactive=L'account non √® attivo. Verifica la tua email o contatta il supporto
 auth.logout.success=Disconnessione effettuata con successo
 auth.register.success=Utente registrato con successo
-auth.register.email.exists=L'email Ë gi‡ in uso
+auth.register.email.exists=L'email √® gi√† in uso
 auth.token.invalid=Token non valido
 auth.token.expired=Token scaduto
 auth.refresh.success=Token rinnovato con successo
@@ -33,14 +33,14 @@ auth.password.invalid=Password non valida
 auth.user.not.authenticated=Utente non autenticato correttamente
 
 # Nuovi messaggi di autenticazione
-auth.service.running=Il servizio di autenticazione Ë in funzione
+auth.service.running=Il servizio di autenticazione √® in funzione
 auth.email.check.error=Errore nella verifica dell'email
 auth.logout.error=Errore nella disconnessione
 auth.register.failed=Registrazione fallita
 auth.login.failed.message=Accesso fallito
 
 # ========================================
-# LIMITAZIONE VELOCIT¿ - Storia 5: Sprint S2.2
+# LIMITAZIONE VELOCIT√Ä - Storia 5: Sprint S2.2
 # ========================================
 rate.limit.exceeded=Troppe richieste. Riprova tra {0} secondi
 rate.limit.warning=Limite di richieste vicino al massimo
@@ -49,12 +49,12 @@ rate.limit.user.exceeded=Limite di richieste per utente superato
 rate.limit.ip.exceeded=Limite di richieste per IP superato
 rate.limit.report.exceeded=Limite di richieste per report superato
 rate.limit.admin.exceeded=Limite di richieste amministrative superato
-rate.limit.enabled=Limitazione velocit‡ abilitata
-rate.limit.disabled=Limitazione velocit‡ disabilitata
-rate.limit.bucket.created=Bucket di limitazione velocit‡ creato per {0}
-rate.limit.bucket.cleared=Cache dei bucket di limitazione velocit‡ pulita
+rate.limit.enabled=Limitazione velocit√† abilitata
+rate.limit.disabled=Limitazione velocit√† disabilitata
+rate.limit.bucket.created=Bucket di limitazione velocit√† creato per {0}
+rate.limit.bucket.cleared=Cache dei bucket di limitazione velocit√† pulita
 rate.limit.stats.requests=Richieste rimanenti: {0}
-rate.limit.stats.reset=Il limite sar‡ ripristinato tra: {0} secondi
+rate.limit.stats.reset=Il limite sar√† ripristinato tra: {0} secondi
 
 # ========================================
 # CACHE E PRESTAZIONI - Storia 5: Sprint S2.2
@@ -84,7 +84,7 @@ performance.compression.ratio=Rapporto di compressione: {0}%
 integration.test.success=Test di integrazione eseguito con successo
 integration.test.failed=Test di integrazione fallito: {0}
 integration.cache.test=Test cache eseguito
-integration.rate.limit.test=Test limitazione velocit‡ eseguito
+integration.rate.limit.test=Test limitazione velocit√† eseguito
 integration.compression.test=Test compressione eseguito
 integration.performance.test=Test prestazioni eseguito in {0}ms
 optimization.index.created=Indice creato per ottimizzazione: {0}
@@ -109,13 +109,13 @@ user.email.verified=Email verificata con successo
 user.phone.verified=Telefono verificato con successo
 user.password.reset=Password reimpostata con successo
 user.must.be.active=L'utente deve essere attivo
-user.already.active=L'utente Ë gi‡ attivo
-user.not.active=L'utente non Ë attivo
-user.already.blocked=L'utente Ë gi‡ sospeso
-user.not.blocked=L'utente non Ë sospeso
-user.email.already.verified=L'email Ë gi‡ verificata
-user.phone.already.verified=Il telefono Ë gi‡ verificato
-user.role.already.exists=L'utente ha gi‡ questo ruolo
+user.already.active=L'utente √® gi√† attivo
+user.not.active=L'utente non √® attivo
+user.already.blocked=L'utente √® gi√† sospeso
+user.not.blocked=L'utente non √® sospeso
+user.email.already.verified=L'email √® gi√† verificata
+user.phone.already.verified=Il telefono √® gi√† verificato
+user.role.already.exists=L'utente ha gi√† questo ruolo
 user.role.not.exists=L'utente non ha questo ruolo
 
 # ========================================
@@ -126,7 +126,7 @@ seller.updated=Venditore aggiornato con successo
 seller.activated=Venditore attivato con successo
 seller.deactivated=Venditore disattivato con successo
 seller.not.found=Venditore non trovato
-seller.already.exists=L'utente Ë gi‡ un venditore attivo
+seller.already.exists=L'utente √® gi√† un venditore attivo
 seller.promoted=Utente promosso a venditore con successo
 seller.contract.required=Il venditore deve avere un contratto attivo
 
@@ -141,16 +141,16 @@ contract.suspended=Contratto sospeso con successo
 contract.deleted=Contratto eliminato con successo
 contract.expired=Contratto scaduto
 contract.not.found=Contratto non trovato
-contract.cannot.edit=Il contratto non puÚ essere modificato nello stato attuale
-contract.cannot.activate=Il contratto non puÚ essere attivato
-contract.cannot.cancel=Il contratto non puÚ essere annullato
+contract.cannot.edit=Il contratto non pu√≤ essere modificato nello stato attuale
+contract.cannot.activate=Il contratto non pu√≤ essere attivato
+contract.cannot.cancel=Il contratto non pu√≤ essere annullato
 contract.cannot.suspend=Solo i contratti attivi possono essere sospesi
 contract.cannot.approve=Solo i contratti in bozza o sospesi possono essere attivati
-contract.conflict.exists=Esiste gi‡ un contratto attivo in conflitto per questo venditore e categoria nel periodo specificato
+contract.conflict.exists=Esiste gi√† un contratto attivo in conflitto per questo venditore e categoria nel periodo specificato
 contract.fee.invalid=La commissione deve essere maggiore di zero
 contract.date.invalid=La data di fine deve essere successiva alla data di inizio
 contract.draft.only.delete=Solo i contratti in bozza possono essere eliminati
-contract.seller.has.active=Il venditore ha gi‡ un contratto attivo
+contract.seller.has.active=Il venditore ha gi√† un contratto attivo
 
 # Nuovi messaggi contratti
 contract.active.found=Contratto attivo trovato
@@ -169,18 +169,18 @@ product.expired=Prodotto scaduto
 product.sold=Prodotto venduto
 product.cancelled=Prodotto annullato
 product.not.found=Prodotto non trovato
-product.cannot.edit=Il prodotto non puÚ essere modificato nello stato attuale
+product.cannot.edit=Il prodotto non pu√≤ essere modificato nello stato attuale
 product.cannot.publish=Solo i prodotti in bozza possono essere pubblicati
-product.cannot.delete=Il prodotto non puÚ essere eliminato
-product.cannot.cancel=Il prodotto non puÚ essere annullato nello stato attuale
+product.cannot.delete=Il prodotto non pu√≤ essere eliminato
+product.cannot.cancel=Il prodotto non pu√≤ essere annullato nello stato attuale
 product.cannot.mark.sold=Solo i prodotti attivi possono essere contrassegnati come venduti
 product.cannot.expire=Solo i prodotti attivi possono scadere
 product.price.invalid=Il prezzo deve essere maggiore di zero
 product.price.must.be.higher=Il nuovo prezzo deve essere maggiore del prezzo attuale
 product.increment.invalid=L'incremento minimo deve essere maggiore di zero
 product.date.invalid=La data di chiusura deve essere futura
-product.title.required=Il titolo Ë obbligatorio
-product.description.required=La descrizione Ë obbligatoria
+product.title.required=Il titolo √® obbligatorio
+product.description.required=La descrizione √® obbligatoria
 
 # Nuovi messaggi prodotti
 product.list.success=Prodotti elencati con successo
@@ -196,14 +196,14 @@ lot.cancelled=Lotto annullato con successo
 lot.deleted=Lotto eliminato con successo
 lot.closed=Lotto chiuso
 lot.not.found=Lotto non trovato
-lot.cannot.edit=Il lotto non puÚ essere modificato nello stato attuale
-lot.cannot.activate=Il lotto non puÚ essere attivato nello stato attuale
-lot.cannot.cancel=Il lotto non puÚ essere annullato nello stato attuale
+lot.cannot.edit=Il lotto non pu√≤ essere modificato nello stato attuale
+lot.cannot.activate=Il lotto non pu√≤ essere attivato nello stato attuale
+lot.cannot.cancel=Il lotto non pu√≤ essere annullato nello stato attuale
 lot.cannot.delete=Solo i lotti in bozza possono essere eliminati
 lot.cannot.close=Solo i lotti attivi possono essere chiusi
 lot.date.invalid=La data di chiusura deve essere futura
-lot.title.required=Il titolo Ë obbligatorio
-lot.description.required=La descrizione Ë obbligatoria
+lot.title.required=Il titolo √® obbligatorio
+lot.description.required=La descrizione √® obbligatoria
 lot.products.associated=Prodotti associati al lotto con successo
 lot.products.activated=Prodotti del lotto attivati con successo
 lot.products.required=Il lotto deve avere almeno un prodotto per essere attivato
@@ -238,8 +238,8 @@ products.valid.image.none=Nessuna immagine disponibile per il lotto
 # Filtri e Ordinamento
 filter.category.applied=Filtro categoria applicato: {0}
 filter.search.applied=Filtro ricerca applicato: {0}
-sort.proximity.ending=Ordinato per prossimit‡ alla chiusura
-sort.recent=Ordinato per pi˘ recenti
+sort.proximity.ending=Ordinato per prossimit√† alla chiusura
+sort.recent=Ordinato per pi√π recenti
 sort.alphabetical=Ordinato alfabeticamente
 sort.invalid=Criterio di ordinamento non valido: {0}
 
@@ -326,7 +326,7 @@ revenue.calculation.error=Errore nel calcolo delle proiezioni ricavi
 
 # Validazioni Periodo
 validation.date.start.before.end=La data di inizio deve essere precedente alla data di fine
-validation.period.max.one.year=Il periodo massimo consentito Ë di 1 anno
+validation.period.max.one.year=Il periodo massimo consentito √® di 1 anno
 validation.period.invalid=Periodo non valido specificato
 
 # Formattazione Date
@@ -378,11 +378,11 @@ role.visitor=Visitatore
 # EMAIL
 # ========================================
 email.welcome.subject=Benvenuto nel Sistema di Asta Elettronica
-email.welcome.body=Ciao {0},\n\nBenvenuto nel nostro sistema di asta elettronica!\n\nIl tuo account Ë stato creato con successo. Ora puoi:\n- Partecipare alle aste\n- Fare offerte sui prodotti\n- Seguire le tue aste preferite\n\nCordiali saluti,\nTeam Asta Elettronica
-email.bid.outbid.subject=La tua offerta Ë stata superata!
-email.bid.outbid.body=Ciao {0},\n\nLa tua offerta sul prodotto ''{1}'' Ë stata superata.\nOfferta attuale: {2}\n\nAccedi al sistema per fare una nuova offerta!\n\nCordiali saluti,\nTeam Asta Elettronica
+email.welcome.body=Ciao {0},\n\nBenvenuto nel nostro sistema di asta elettronica!\n\nIl tuo account √® stato creato con successo. Ora puoi:\n- Partecipare alle aste\n- Fare offerte sui prodotti\n- Seguire le tue aste preferite\n\nCordiali saluti,\nTeam Asta Elettronica
+email.bid.outbid.subject=La tua offerta √® stata superata!
+email.bid.outbid.body=Ciao {0},\n\nLa tua offerta sul prodotto ''{1}'' √® stata superata.\nOfferta attuale: {2}\n\nAccedi al sistema per fare una nuova offerta!\n\nCordiali saluti,\nTeam Asta Elettronica
 email.auction.ending.subject=L'asta termina presto!
-email.auction.ending.body=Ciao {0},\n\nL'asta per il prodotto ''{1}'' termina tra {2}.\n\nQuesta Ë la tua ultima possibilit‡ di fare un'offerta!\n\nCordiali saluti,\nTeam Asta Elettronica
+email.auction.ending.body=Ciao {0},\n\nL'asta per il prodotto ''{1}'' termina tra {2}.\n\nQuesta √® la tua ultima possibilit√† di fare un'offerta!\n\nCordiali saluti,\nTeam Asta Elettronica
 email.send.failed=Invio email fallito: {0}
 
 # ========================================
@@ -414,7 +414,7 @@ error.403=Accesso negato
 error.404=Risorsa non trovata
 error.409=Conflitto dati
 error.422=Dati non elaborabili
-error.429=Troppe richieste - riprova pi˘ tardi
+error.429=Troppe richieste - riprova pi√π tardi
 error.500=Errore interno del server
 
 # ========================================
@@ -477,7 +477,7 @@ export.pdf.error=Errore nella generazione report PDF
 validation.days.range=Il numero di giorni deve essere tra 1 e 365
 validation.months.range=Il numero di mesi deve essere tra 1 e 24
 validation.urgency.invalid=Livello urgenza non valido: {0}. Valori validi: ALTA, MEDIA, BASSA
-validation.seller.required=ID venditore Ë obbligatorio
+validation.seller.required=ID venditore √® obbligatorio
 validation.export.format.invalid=Formato esportazione non valido: {0}. Formati validi: CSV, PDF
 
 # Messaggi Email per Contratti in Scadenza
@@ -494,7 +494,7 @@ scheduler.notifications.sent=Scheduler ha inviato {0} notifiche contratti in sca
 scheduler.cleanup.start=Avvio pulizia automatica dati
 scheduler.cleanup.completed=Pulizia automatica completata
 
-# Urgenza e Priorit‡
+# Urgenza e Priorit√†
 urgency.high=Alta
 urgency.medium=Media
 urgency.low=Bassa
@@ -556,9 +556,9 @@ company.headquarters=Brasile
 contact.email=contatto@asta.com
 contact.phone=+55 (11) 9999-9999
 contact.whatsapp=+55 (11) 9999-9999
-contact.address=Via delle Aste, 123 - S„o Paulo/SP
+contact.address=Via delle Aste, 123 - S√£o Paulo/SP
 contact.zipcode=01234-567
-contact.business.hours=LunedÏ a VenerdÏ: 8:00 alle 18:00
+contact.business.hours=Luned√¨ a Venerd√¨: 8:00 alle 18:00
 contact.support.email=supporto@asta.com
 contact.commercial.email=commerciale@asta.com
 
