S2.3 H5 Done - Detalhs do produto no lote público

--- a/backend/src/main/resources/messages/messages_pt_BR.properties
+++ b/backend/src/main/resources/messages/messages_pt_BR.properties
@@ -2,6 +2,7 @@
 # Arquivo de mensagens para internacionalização
 # História 5: Integração e Otimização - Sprint S2.2
 # História 02: Catálogo de Lotes - Sprint S2.3 V2
+# História 04: Página de Detalhes do Produto Válido - Sprint S2.3 V2
 # Atualização: Internacionalização Completa - Novas Mensagens Adicionadas
 
 # ========================================
@@ -188,6 +189,22 @@ product.description.required=Descrição é obrigatória
 # Novas mensagens de produtos
 product.list.success=Produtos listados com sucesso
 product.categories.list.success=Categorias listadas com sucesso
+product.found=Produto encontrado com sucesso
+product.not.found.in.lot=Produto não encontrado ou não válido no lote especificado
+
+# ========================================
+# HISTÓRIA 03 e 04: Produtos Válidos de Lotes - Sprint S2.3 V2
+# ========================================
+lot.products.success=Produtos do lote carregados com sucesso
+lot.products.empty=Nenhum produto válido encontrado no lote
+lot.products.count={0} produtos válidos encontrados no lote
+lot.products.error=Erro ao carregar produtos do lote
+
+# Validações específicas para produtos de lotes
+product.lot.validation.success=Produto válido encontrado no lote
+product.lot.validation.failed=Produto não pertence ao lote ou não está ativo
+product.lot.access.public=Acesso público ao produto do lote autorizado
+product.lot.status.active=Produto ativo e disponível para visualização
 
 # ========================================
 # LOTES
@@ -488,10 +505,10 @@ validation.seller.required=ID do vendedor é obrigatório
 validation.export.format.invalid=Formato de exportação inválido: {0}. Formatos válidos: CSV, PDF
 
 # Mensagens de Email para Contratos Vencendo
-contract.expiring.subject=?? Contrato vencendo em {0} dias
+contract.expiring.subject=⚠️ Contrato vencendo em {0} dias
 contract.expiring.body=Olá {0},\n\nSeu contrato na categoria ''{1}'' vence em {2} dias.\n\nPor favor, entre em contato conosco para renovação.\n\nAtenciosamente,\nEquipe Leilão Eletrônico
-contract.expiring.urgent.subject=? URGENTE: Contrato vence em {0} dias
-contract.expiring.reminder.subject=? Lembrete: Contrato vencendo em {0} dias
+contract.expiring.urgent.subject=🚨 URGENTE: Contrato vence em {0} dias
+contract.expiring.reminder.subject=📅 Lembrete: Contrato vencendo em {0} dias
 
 # Scheduler e Jobs Automáticos
 scheduler.contracts.expiring.start=Iniciando verificação automática de contratos vencendo
